# ferro

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: cd.yml  update_readme.yml  winget.yml
src/: main.rs
