[package]
name = "ferro"
version = "0.1.0"
edition = "2024"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
description = "IRC Client"
documentation = "https://github.com/crisidev/ferro"
readme = "README.md"
homepage = "https://github.com/crisidev/ferro"
repository = "https://github.com/crisidev/ferro"
license-file = "LICENSE"
keywords = ["irc", "chat", "terminal", "tui"]
categories = ["command-line-utilities", "command-line-interface"]
include = ["LICENSE", "README.md", "themes/**/*.toml"]
rust-version = "1.85"

[dependencies]
ratatui = { version = "0.29", features = ["serde", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.18.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "fe"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.deb]
inherits = "release"
debug = false
